--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_mwork_base_nav">MworkBaseNavActivity</string>
+    <string name="title_activity_task_menu">TaskMenu</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
