--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Home Activity and General String -->
+
     <string name="app_name">mWork</string>
-    <string name="title_activity_mwork_base">MworkBaseActivity</string>
-    <string name="hello_world">Hello world!</string>
+
     <string name="action_settings">Settings</string>
-    <string name="title_activity_mwork_base_nav">MworkBaseNavActivity</string>
+
     <string name="title_activity_home">mWork</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
